Creating controllers, models and tests for them. (edits)